# myTestAPP

./: README.md
MyApplication/: build.gradle
MyApplication/app/: build.gradle  proguard-rules.pro
MyApplication/app/src/androidTest/java/com/example/pherson/myapplication/: ExampleInstrumentedTest.java
MyApplication/app/src/main/: AndroidManifest.xml
MyApplication/app/src/main/cpp/: CMakeLists.txt  JNIDynamicRegister.cpp  JNItest.cpp  demo.cpp  effects_qq_voicer.cpp  md5.cpp  md5.h
MyApplication/app/src/main/cpp/ffm/: jx_ffmpeg_cmd_run.c  jx_ffmpeg_cmd_run.h  jx_ffmpeg_jni.cpp
MyApplication/app/src/main/java/com/example/pherson/myapplication/: CommomUtils.java  ContraintActivity.java  Java2CJNI.java  MainActivity.java  SecondActivity.java
MyApplication/app/src/main/java/com/example/pherson/myapplication/javatest/: OutClass.java  RandomTest.java  TestClass.java
MyApplication/app/src/main/java/com/example/pherson/myapplication/jni/: Java2C.c  Java2CJNI.h
MyApplication/app/src/main/java/com/xqd/myapplication/: CommomUtils.java  ContraintActivity.java  EncryptUtil.java  ExecShell.java  JNIUtil.java  Java2CJNI.java  MainActivity.java  Root.java  SecondActivity.java
MyApplication/app/src/main/java/com/xqd/myapplication/bean/: BaseBean.java  NewsBean.java  ResponsBase.java
MyApplication/app/src/main/java/com/xqd/myapplication/http/: APIService.java  APIServiceImp.java
MyApplication/app/src/main/java/com/xqd/myapplication/javatest/: KotlinTest.kt  OutClass.java  RandomTest.java  TestClass.java
MyApplication/app/src/main/java/com/xqd/myapplication/jni/: Android.mk  Java2C.c  com_xqd_myapplication_Java2CJNI.h
MyApplication/app/src/main/java/com/xqd/myapplication/ui/: AnimatorActivity.java  AsyncTaskActivity.java  AutoCompleteTextViewActivity.java  CanvasDemoActivity.java  ContraintActivity.java  DevicesAdapter.java  FfmpegActivity.java  KotlinTestActivity.kt  MainActivity.java  MockGpsProviderActivity.java  MyApplication.kt  ObservableActivtiy.java  ProjectionActivity.java  SecondActivity.java  VideoTestActivity.java  VoiceActivity.java
MyApplication/app/src/main/java/com/xqd/myapplication/upnp/: AVTransportSubscriptionCallback.java  BaseClingResponse.java  BaseSubscriptionCallback.java  BrowseRegistryListener.java  ClingControlPoint.java  ClingDevice.java  ClingDeviceList.java  ClingManager.java  ClingPlayControl.java  ClingPositionResponse.java  ClingResponse.java  ClingUpnpService.java  ClingUtils.java  ClingVolumeResponse.java  ControlCallback.java  ControlReceiveCallback.java  DLANPlayState.java  DeviceManager.java  IControlPoint.java  IDLNAManager.java  IDevice.java  IDeviceManager.java  IPlayControl.java  IResponse.java  ISubscriptionControl.java  RenderingControlSubscriptionCallback.java  SubscriptionControl.java
MyApplication/app/src/main/java/com/xqd/myapplication/util/: AESUtil.java  AllCode.java  CommomUtils.java  DecelerateAccelerateInterpolator.java  DisplayUtil.java  EncryptUtil.java  ExecShell.java  FFmpegBridge.java  JNIUtil.java  RSAUtil.java  Root.java
MyApplication/app/src/main/res/anim/: welcome_anim.xml
MyApplication/app/src/main/res/animator/: object_animator.xml  rotate_animator.xml
MyApplication/app/src/main/res/drawable/: shape_point_storke_welcome.xml  shape_point_welcome.xml
MyApplication/app/src/main/res/layout/: activity_animator.xml  activity_async_task.xml  activity_auto_complete_text_view.xml  activity_contraint.xml  activity_ffmpeg.xml  activity_gps.xml  activity_kotlin_test.xml  activity_main.xml  activity_observable.xml  activity_projection.xml  activity_second.xml  activity_video_test.xml  activity_voice.xml  content_auto_complete_text_view.xml  item_auto.xml  item_device.xml
MyApplication/app/src/main/res/values/: strings.xml  styles.xml
MyApplication/app/src/main/res/values-en/: strings.xml
MyApplication/app/src/test/java/com/example/pherson/myapplication/: ExampleUnitTest.java
MyApplication/app/src/test/java/com/example/pherson/myapplication/javatest/: RandomTestTest.java
MyApplication/gradle/wrapper/: gradle-wrapper.properties
